k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pardis-shop
  labels:
    app.kubernetes.io/part-of: pardis-shop
